fix: text overflowing right

--- a/src/app/app/(glyph)/book/page.module.css
+++ b/src/app/app/(glyph)/book/page.module.css
@@ -9,6 +9,9 @@
   font-family: "DCC-Ash";
   font-size: 2rem;
   font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .quests {
